[gd_scene load_steps=2 format=3 uid="uid://dg5jgxbrxsn8u"]

[ext_resource type="Script" path="res://scenes/dice_entry.gd" id="1_7v4nj"]

[node name="dice_entry" type="VBoxContainer"]
script = ExtResource("1_7v4nj")

[node name="dice_summary" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="glyph_icon" type="ColorRect" parent="dice_summary"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
color = Color(0.0901961, 1, 1, 1)

[node name="glyph_title" type="Label" parent="dice_summary"]
layout_mode = 2
text = "default"

[node name="count" type="Label" parent="dice_summary"]
layout_mode = 2
text = "0
"

[node name="full_dice_view" type="VBoxContainer" parent="."]
visible = false
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="full_dice_view"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="glyph_icon" type="ColorRect" parent="full_dice_view/HBoxContainer2"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
color = Color(0.0901961, 1, 1, 1)

[node name="glyph_icon2" type="ColorRect" parent="full_dice_view/HBoxContainer2"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
color = Color(0.901492, 0.861697, 0.922959, 1)

[node name="glyph_icon3" type="ColorRect" parent="full_dice_view/HBoxContainer2"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
color = Color(0.0901961, 1, 1, 1)

[node name="glyph_icon4" type="ColorRect" parent="full_dice_view/HBoxContainer2"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
color = Color(0.709957, 0.972006, 0.443958, 1)

[node name="glyph_icon5" type="ColorRect" parent="full_dice_view/HBoxContainer2"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
color = Color(0.0901961, 1, 1, 1)

[node name="glyph_icon6" type="ColorRect" parent="full_dice_view/HBoxContainer2"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
color = Color(0.909691, 0.91223, 0.352799, 1)
